fix display on header title on mobile

--- a/src/ui/header/header.module.scss
+++ b/src/ui/header/header.module.scss
@@ -3,11 +3,9 @@
 
 .header{
     display: flex;
-    column-gap: 1rem;
     background-color: var(--background);
 
     @include tablet{
-        column-gap: 0;
         max-height: 5.25rem;
     }
     
@@ -35,6 +33,7 @@
         display: flex;
         flex-grow: 1;
         padding: 1rem 0.75rem 1rem 0;
+        max-width: calc(100vw - 2.5rem);
 
         @include tablet{
             border-bottom: var(--border);
@@ -69,7 +68,6 @@
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 24px;
-    margin: 0 0 0 auto;
 
     @include tablet{
         background-image: none;
